<resources>
    <string name="app_name">NUMAD23Sp_Team26</string>
    <string name="team_26">Team 26</string>
    <string name="about_button_team_26">About</string>
    <string name="team_26_member_names">Member 1: Elio Khouri \nMember 2: Phyu Han \nMember 3: Thara Messeroux \nMember 4: Tyler Poff</string>

    <string name="search_movie_a6">Search Movies (A6)</string>
    <string name="search_movie">Search Movies</string>
    <string name="search">Search</string>

    <string name="release">Release Year: %1$s</string>
    <string name="movie_title">Movie Title</string>
    <string name="type">Type: %1$s</string>
    <string name="genre">Genre: %1$s</string>

    <string name="loading">Loading...</string>

    <string name="send_stickers_a8">Send Stickers (A8)</string>
    <string name="username">Username</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="login_nav">Already have an account?</string>
    <string name="register_nav">Don\'t have an account?</string>

    <string name="user_greeting">Hello, %1$s</string>
    <string name="sent_count">Stickers Sent</string>
    <string name="num_sent">Total sent: %1$d</string>
    <string name="send_stickers">Send Sticker</string>
    <string name="received_history">Received History</string>
    <string name="logout">Logout</string>
    <string name="you_re_sending_to">You\'re sending to: %1$s</string>
    <string name="send">Send</string>

    <string name="Stickers_list">Select Sticker</string>
    <string name="Stickers_button">Sticker Button</string>

    <string name="sticker_name">Sticker Name</string>
    <string name="sticker_from">From: %1$s</string>
    <string name="sticker_timestamp">Timestamp: %1$s</string>
    <string name="you_got_a_sticker_from">You got a sticker from</string>
    <string name="sticker_from_user">User</string>

    <string name="pixelpop">PixelPop</string>

    <string name="sign_up">Sign Up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="already_have_an_account_login">Already have an account? Click here to login.</string>
    <string name="dont_have_an_account">Don\'t have an account? Click here to sign up.</string>

    <string name="select_adventure">Select Adventure</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>

    <string name="quit_level">Quit level</string>
    <string name="pause_level">Pause</string>
    <string name="reset">Reset</string>
    <string name="done">Done</string>
    <string name="eraser">Eraser</string>
    <string name="memorize">Memorize</string>
    <string name="next_level">Next Level</string>
    <string name="retry">Retry</string>
    <string name="levelMenu">Level menu</string>
    <string name="level_num">Level %1$d</string>
    <string name="original_pixels">Original Pixels:</string>
    <string name="your_pixels">Your Pixels:</string>
    <string name="accuracy">Accuracy: %1$s</string>
    <string name="quit_msg">Are you sure you want to quit this level?</string>
    <string name="back">Back</string>
    <string name="start">Start</string>
    <string name="cancel">Cancel</string>
    <string name="quit">Quit</string>
    <string name="resume">Resume</string>
    <string name="pause_menu">Paused</string>
    <string name="shake_to_erase">Shake to reset</string>
    <string name="singleplayer">Singleplayer</string>
    <string name="host_multiplayer">Host online co-op</string>
    <string name="join_multiplayer">Join online co-op</string>
    <string name="your_top_scores">Your top scores:</string>
    <string name="no_top_score">No top score available.\nCreate one now!</string>
    <string name="reset_msg">Are you sure you want to reset your drawing?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="shake_disabled_msg">Shake To Erase has been turned off! Re-toggle to turn it back on.</string>
    <string name="ok">Ok</string>
    <string name="skip_timer">Skip timer</string>
    <string name="game_id">Game ID: %1$s</string>
    <string name="waiting_for_player_two_to_join">Waiting for player two to join…</string>
    <string name="stay_on_this_page">Please stay on this page</string>
    <string name="provide_game_id_msg">Please provide the game ID to player two</string>
    <string name="game_id_hint">Game ID</string>
    <string name="join">Join</string>
    <string name="waiting_for_host">Waiting for host to start game…</string>
    <string name="online_session_ended">Online session ended</string>
    <string name="other_player_disconnected">Other player disconnected</string>
    <string name="p1">P1</string>
    <string name="p2">P2</string>
    <string name="online_co_op">Online co-op</string>
    <string name="waiting_for_host_to_be_done">Waiting for host to be done…</string>
    <string name="leave_co_op_session">Leave co-op session</string>
</resources>