<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/teamTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/team_26"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btnMovie"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/btnMovie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_movie_a6"
        app:layout_constraintBottom_toTopOf="@+id/btnSticker"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/teamTV"
        android:layout_marginVertical="20dp" />

    <!--    test-->

    <Button
        android:id="@+id/btnSticker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_stickers_a8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnMovie" />

    <Button
        android:id="@+id/btnStickerList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TEST!"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSticker" />

</androidx.constraintlayout.widget.ConstraintLayout>